--- a/MZcms.ServiceProvider/MZcms.ServiceProvider.csproj
+++ b/MZcms.ServiceProvider/MZcms.ServiceProvider.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,7 +43,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Instance_T_.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="LogInterception.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceInstacnceCreateException.cs" />
+    <Compile Include="ServiceProviderConfig.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MZcms.AOPProxy\MZcms.AOPProxy.csproj">
+      <Project>{c8425329-eb22-4ee4-9c65-15f4e5bfbf11}</Project>
+      <Name>MZcms.AOPProxy</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.Core\MZcms.Core.csproj">
+      <Project>{0dd5872a-886c-49d6-a1c4-2f70e8fdc413}</Project>
+      <Name>MZcms.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.IServices\MZcms.IServices.csproj">
+      <Project>{5d2899b8-d510-4d0b-b239-a01b2ad28f06}</Project>
+      <Name>MZcms.IServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
