--- a/MZcms.Web/packages.config
+++ b/MZcms.Web/packages.config
@@ -7,8 +7,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net45" />
