--- a/MZcms.Service/MZcms.Service.csproj
+++ b/MZcms.Service/MZcms.Service.csproj
@@ -51,8 +51,13 @@
     <Compile Include="MemberService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
+    <Compile Include="SiteSettingService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MZcms.Core\MZcms.Core.csproj">
+      <Project>{0DD5872A-886C-49D6-A1C4-2F70E8FDC413}</Project>
+      <Name>MZcms.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MZcms.Entity\MZcms.Entity.csproj">
       <Project>{94B8F2AE-CFCD-450F-84F6-835743B2BB02}</Project>
       <Name>MZcms.Entity</Name>
