--- a/MZcms.Service/MZcms.Service.csproj
+++ b/MZcms.Service/MZcms.Service.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>d7b5b355-329f-4394-ad42-bb3ff441c153</ProjectGuid>
+    <ProjectGuid>{D7B5B355-329F-4394-AD42-BB3FF441C153}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MZcms.Service</RootNamespace>
@@ -30,24 +30,48 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.Extended">
+      <HintPath>..\packages\EntityFramework.Extended.6.1.0.168\lib\net45\EntityFramework.Extended.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceBase.cs" />
+    <Compile Include="System\SiteSettingService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MZcms.CommonModel\MZcms.CommonModel.csproj">
+      <Project>{03440b05-bf8b-4b13-8f54-1ad1c819a91f}</Project>
+      <Name>MZcms.CommonModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.Core\MZcms.Core.csproj">
+      <Project>{720ff9a7-86ed-4d2a-8bb2-e9f958d59bf7}</Project>
+      <Name>MZcms.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.Entity\MZcms.Entity.csproj">
+      <Project>{6cfef5cd-7fa4-47d8-8f7f-67fc0c5069e6}</Project>
+      <Name>MZcms.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.IServices\MZcms.IServices.csproj">
+      <Project>{1ea8fc44-c40a-4511-9062-8d453430be44}</Project>
+      <Name>MZcms.IServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.Model\MZcms.Model.csproj">
+      <Project>{2c6d0638-c5f6-432a-aca5-2710d243fe96}</Project>
+      <Name>MZcms.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
