--- a/MZcms.Entity/MZcms.Entity.csproj
+++ b/MZcms.Entity/MZcms.Entity.csproj
@@ -65,6 +65,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Entities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="MyEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
