--- a/MZcms.DTO/MZcms.DTO.csproj
+++ b/MZcms.DTO/MZcms.DTO.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A412F46-B2B1-42F4-AB5E-3EA03F9BA194}</ProjectGuid>
+    <ProjectGuid>{DD95A3FD-691C-427A-9A88-E3FF44E5951E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MZcms.Application</RootNamespace>
-    <AssemblyName>MZcms.Application</AssemblyName>
+    <RootNamespace>MZcms.DTO</RootNamespace>
+    <AssemblyName>MZcms.DTO</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper">
-      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,26 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SiteSettingApplication.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MZcms.Core\MZcms.Core.csproj">
-      <Project>{720FF9A7-86ED-4D2A-8BB2-E9F958D59BF7}</Project>
-      <Name>MZcms.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MZcms.DTO\MZcms.DTO.csproj">
-      <Project>{dd95a3fd-691c-427a-9a88-e3ff44e5951e}</Project>
-      <Name>MZcms.DTO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MZcms.IServices\MZcms.IServices.csproj">
-      <Project>{1ea8fc44-c40a-4511-9062-8d453430be44}</Project>
-      <Name>MZcms.IServices</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MZcms.Model\MZcms.Model.csproj">
-      <Project>{2c6d0638-c5f6-432a-aca5-2710d243fe96}</Project>
-      <Name>MZcms.Model</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
