--- a/MZcms.CommonModel/MZcms.CommonModel.csproj
+++ b/MZcms.CommonModel/MZcms.CommonModel.csproj
@@ -41,7 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheKeyCollection.cs" />
+    <Compile Include="CommonConst.cs" />
+    <Compile Include="Delegates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryPageModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
