--- a/MZcms.Service/MZcms.Service.csproj
+++ b/MZcms.Service/MZcms.Service.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
+    <Compile Include="System\OperationLogService.cs" />
     <Compile Include="System\SiteSettingService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +60,10 @@
     <ProjectReference Include="..\MZcms.Core\MZcms.Core.csproj">
       <Project>{720ff9a7-86ed-4d2a-8bb2-e9f958d59bf7}</Project>
       <Name>MZcms.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MZcms.DTO\MZcms.DTO.csproj">
+      <Project>{dd95a3fd-691c-427a-9a88-e3ff44e5951e}</Project>
+      <Name>MZcms.DTO</Name>
     </ProjectReference>
     <ProjectReference Include="..\MZcms.Entity\MZcms.Entity.csproj">
       <Project>{6cfef5cd-7fa4-47d8-8f7f-67fc0c5069e6}</Project>
