--- a/MZcms.CommonModel/MZcms.CommonModel.csproj
+++ b/MZcms.CommonModel/MZcms.CommonModel.csproj
@@ -43,6 +43,7 @@
     <Compile Include="CacheKeyCollection.cs" />
     <Compile Include="CommonConst.cs" />
     <Compile Include="Delegates.cs" />
+    <Compile Include="Model\WeiXinShareArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPageModel.cs" />
   </ItemGroup>
