--- a/MZcms.Model/MZcms.Model.csproj
+++ b/MZcms.Model/MZcms.Model.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -58,6 +59,7 @@
     <Compile Include="Members.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SiteSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolePrivileges.cs">
       <DependentUpon>Entities.tt</DependentUpon>
