--- a/MZcms.Application/MZcms.Application.csproj
+++ b/MZcms.Application/MZcms.Application.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManagerApplication.cs" />
     <Compile Include="OperationLogApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteSettingApplication.cs" />
