--- a/MZcms.Service/MZcms.Service.csproj
+++ b/MZcms.Service/MZcms.Service.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
+    <Compile Include="System\ManagerService.cs" />
     <Compile Include="System\OperationLogService.cs" />
     <Compile Include="System\SiteSettingService.cs" />
   </ItemGroup>
